0.1.74
- make plot.TS() isopycnal label size be same on top and right sides
  http://code.google.com/p/r-oce/issues/detail?id=26
- give plot.section() the ability to control contour levels and labels
0.1.73
- plot.topo() narrows autoscale to xlim-ylim region, if provided
- add plot.ctd() 'textpanel' option, and put the profiles in the same row
- fix bug in plot.profile() to let it take Slim,..., as args
  http://code.google.com/p/r-oce/issues/detail?id=25
- fix bug in plot.profile() font size
  http://code.google.com/p/r-oce/issues/detail?id=24
- fix bug in plot.profile(type="S_T") positioning
  http://code.google.com/p/r-oce/issues/detail?id=23
- fix bug in section plot (bottom was missing)
  http://code.google.com/p/r-oce/issues/detail?id=21
- fix bug in size of salinity axis label for plot.ctd()
- use pch=21 for TS plots (so data density is more visible)

0.1.72
- add interp.barnes()

0.1.71
- fix bug in make.section (ignored the list, if a list provided)
   http://code.google.com/p/r-oce/issues/detail?id=18&q=label:Type-Defect
- add oce.edit()
- add topo.maritimes dataset
- add read.topo(), plot.topo(), and summary.topo()
- add gebco.colors()
- make plot.section() check that pressures coincide

0.1.70
- plot.TS(): make isopycnal list work better for nearly-fresh water
- trim.ctd(): improve equilibration-phase deletion by piecewise-linear regression
- read.ctd(): handle cases without cruise information or scan column
- permit setting xlab and ylab in plot.TS()
- make processing log timestamps be in GMT
- add as.windrose() and plot.windrose()
- add sealevel.tuk sea-level dataset
- add tidem(), predict.tide(), summary.tide(), plot.tide(), and data(tidedata)
- establish a uniform form for objects created by "read" and "as"
- let sw.rho() and similar sw. functions take a ctd object as a single argument
- add sw.dynamic.height()
- make section.grid() and ctd.decimate() extrapolate to surface in "approx" method
- add summary.oce()