@@ -16,6 +16,7 @@ col.N2="brown",
 grid=FALSE, 
 col.grid="lightgray",
 Slim, Tlim, densitylim, N2lim, plim,
+lwd,
 \dots)
 }
 
@@ -44,6 +45,7 @@ Slim, Tlim, densitylim, N2lim, plim,
   \item{densitylim}{Optional limit for density axis}
   \item{N2lim}{Optional limit for N2 axis}
   \item{plim}{Optional limit for p axis}
+  \item{lwd}{lwd value for data line}
   \item{\dots}{Optional arguments passed to other functions.  A common example is to set \code{df}, for 
 use in \link{sw.N2} calculations.} 
 }
